static/CSS/style_pages.css
/* ... */
.topstats {
  margin-left: auto;
  margin-right: auto;
  width: 95%;
}
.list {
  margin-top: 3%;
  /* margin-left: 3%; */
  margin-right: 0;
  background-color: transparent;
}
.list_item {
  margin-right: 0%;
  height: 220px;
  border-color: black;
}
#list {
  /* margin-left: 3%;
  margin-right: 3%; */
  height: 1400px;
  overflow-y: visible;
}
.chosen {
  margin-top: 3%;
  margin-left: 3%;
}
.choice {
  font-size: 1rem !important;
  padding-top: 0.5%;
  margin-bottom: 0;
  padding-bottom: 0.5%;
  background-color: rgba(255, 255, 255, 0.40);
}
#ratings1 svg {
  border-radius: 5px;
}
.clusterid {
  fill: rgba(255, 255, 255, 0.40);
}
.chosenBeers .sectionTitles {
  font-size: 1rem !important;
  padding-top: 0.2rem;
}
.list_item_div {
  height: 800px;
  width: 100%;
  overflow-y: scroll;
}
.liststat {
  height: 350px;
}
#radbar {
  width: 100%;
  height: 800px;
}
#ratings2 {
  padding-left: 3%;
  margin-top: 3%;
}
#ratings3 {
  margin-top: 0%;
}

/* Group ---------------------------------------------------- */

.hm_cd {
  margin-left: 2%;
  margin-top: 6%;
  height: 500px;
  overflow-y: scroll;
}
#hm {
  height: 520px;
  width: 100%;
}
.hm {
  /* margin-top: 3%; */
  margin-bottom: 5%;
}
.styleSquare {
  cursor: pointer;
}
#topBeers h6{
  padding-top: 2%;
}
#bubbles {
  margin-top: 3%;
  margin-right: 0;
  background-color: transparent;
}
.bubbles {
  /* margin-top: 3%; */
  height: 470;
}
.style_text {
  z-index: 1000;
}
.modelex {
  margin-top: 5%;
  margin-left: 5%;
}
.model2 p {
  padding-right: 3%;
  padding-left: 3%;
}
li {
  display: block;
  margin-left: auto;
  margin-right: auto;
  width: 95%;
  color: dimgray;
  line-height: 2rem;
}
.model img {
  display: block;
  margin-left: auto;
  margin-right: auto;
  width: 50%;
}
#topBeers {
  height: 800;
}
#top {
  height: 800;
}
#top .card {
  margin-left: auto;
  margin-right: auto;
  width: 90%;
  border: 0px !important;
}
#thumb {
  margin-top: 1%;
}
.card-head .def {
  background-color: white;
}
#tree {
  height: 520px;
  width: 100%;
}
.treediv {
  margin-left: auto;
  margin-right: auto;
  width: 88%;
  height: 520px;
}
.vis {
  visibility: visible;
}
.hid {
  visibility: hidden;
}
.img_holder {
  height: 85%;
}
.avg_rating {
  font-size: 4.0rem;
}
.avg_title {
  font-size: 1rem;
}
#bubble_table {
  padding-left: 3%;
  padding-right: 3%;
  padding-top: 1%;
  padding-bottom: 1%;
  margin-top: 4%;
}
#bubble_table td {
  text-align: right;
}
.bubbles .card-body {
  padding-bottom: 1%;
}
ul {
  padding-right: 5%;
}
.tree {
  margin-top: 3%;
  margin-bottom: 5%;
}
.pie {
  padding-bottom: 10%;
  margin-top: 5%;
}
.hm .card-body {
  padding: 0;
}

@media (max-width: 992px) {
  .navbar-toggler-icon { 
    width: 4em;
    height: 4em;
  }
  .navbar {
    width: 100%;
  }
  .navbar-nav .nav-link {
    letter-spacing: .15rem;
  }
  .navbar-light .navbar-nav .nav-link {
    float: right;
    font-size: 3rem;
    letter-spacing: .15rem;
  }
  .navbar-expand-lg .navbar-nav .nav-link {
    text-align: right;
    font-size: 3rem;
    letter-spacing: .15rem;
  }
  table {
    margin-top: 2%;
  }
  input {
    width: 350%;
  }
  .card {
    margin-right: 0;
    border-radius: 5%;
  }
  .card .topEntry {
    border: 0;
  }
  .card-body .ent {
    border: 0;
  }
  .topEntry {
    height: inherit;
  }
  .topEntry h6{
    color: black !important;
  }
  .note {
    bottom: -10%;
    text-align: center;
    width: 90%;
  }
  .im_lnk, .im_lnk2, .im_lnk3 {
    width: 30%;
  }
  .im_lnk, .im_lnk2 {
    top: 100%;
  }
  .im_lnk3 {
    top: 70%;
  }
  .ov {
    visibility: hidden;
  }
  #list {
    overflow-y: scroll;
  }
  .img_holder {
    height: 70%;
  }
  .avg_rating {
    font-size: 3rem;
  }
  .avg_title {
    font-size: 0.75rem;
  }
  #bubble_table {
    margin-top: 8%;
  }
  .cardfill {
    margin-top: 3%;
    margin-bottom: 3%;
  }
  .treediv {
    margin-left: auto;
    margin-right: auto;
    width: 95%;
    padding-left: 10%;
  }
  .pie {
    margin-top: 0%;
  }
}

